--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -71,11 +71,28 @@
 										<label for="password">
 											パスワード:
 										</label>
+										<div id="validationErrorMessage1" style="color: red;"></div>
 										<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-messages">
 											パスワードを入力してください
 										</label>
 										<input type="password" name="password" id="password" class="form-control" placeholder="password"
 											 th:field="*{password}" th:errorclass="error-input" value="xxxxxxxx">
+									</div>
+								</div>
+							</div>
+							<!-- 確認用パスワード -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="password">
+											確認用パスワード:
+										</label>
+										<div id="validationErrorMessage2" style="color: red;"></div>
+										<label th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{password}" class="error-messages">
+											同じパスワードを入力してください
+										</label>
+										<input type="password" name="confirmPassword" id="confirmPassword" class="form-control" placeholder="password"
+											 th:field="*{confirmPassword}" th:errorclass="error-input" value="xxxxxxxx">
 									</div>
 								</div>
 							</div>
@@ -101,5 +118,7 @@
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="../../static/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script th:src="@{/js/password.js}"></script>
 </body>
 </html>
