(6-1)500エラーをメンテナンス中の文言が出るページに変更 ※(1-3)Eメール重複チェックをページ遷移から登録画面上のエラーメッセージに変更

--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -5,11 +5,8 @@
 <title>タイトル</title>
 </head>
 <body>
-
-入力されたメールアドレスでは既に登録されています。
-違うメールアドレスで登録してください。<br>
-
-<a th:href="@{/toInsert}">登録画面へ</a>
-
+<hr>
+<h1>メンテナンス中</h1>
+<hr>
 </body>
 </html>
