(6-2)従業員一覧ページでnull件になっていたのを修正

--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -60,7 +60,7 @@
 		<input type="text" name="name">
 		<button>検索</button>
 		</form>
-		<div th:text="${size} + 件"></div>
+		<div th:if="${size} != null" th:text="${size} + 件"></div>
 		<!-- table -->
 		<div class="row">
 			<div
